--- a/quick-grocery/src/app/app.component.html
+++ b/quick-grocery/src/app/app.component.html
@@ -3,4 +3,14 @@
     <div class="col-md-12">
       <app-header></app-header>
     </div>
+
+     <div class="row">
+    <div class="col-md-12">
+      <app-hero-banner></app-hero-banner>
+    </div>
+
+       <div class="row">
+    <div class="col-md-12">
+    <app-top-category></app-top-category>
+    </div>
 </div>
