--- a/quick-grocery/src/app/app.component.html
+++ b/quick-grocery/src/app/app.component.html
@@ -1,16 +1,7 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <app-header></app-header>
-    </div>
-
-     <div class="row">
-    <div class="col-md-12">
-      <app-hero-banner></app-hero-banner>
-    </div>
-
-       <div class="row">
-    <div class="col-md-12">
-    <app-top-category></app-top-category>
-    </div>
+  <app-header />
+  <app-hero-banner />
+  <app-top-category />
+  <app-our-product-section />
+  <app-footer/>
 </div>
