top-catogery component

--- a/quick-grocery/src/app/top-category/top-category.component.html
+++ b/quick-grocery/src/app/top-category/top-category.component.html
@@ -1,33 +1,13 @@
- <section class="top-categories">
-    <div class="container">
-      <h2 class="section-title">Top Categories</h2>
-      <div class="categories-grid">
-        <a href="#" class="category-card">
-          <img
-            src="https://images.unsplash.com/photo-1610832958506-aa56368176cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-            alt="Fruits">
-          <div class="category-name">Fruits</div>
-        </a>
-        <a href="#" class="category-card">
-          <img
-            src="https://images.unsplash.com/photo-1566385101042-1a0aa0c1268c?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-            alt="Vegetables">
-          <div class="category-name">Vegetables</div>
-        </a>
-        <a href="#" class="category-card">
-          <img src="../../assets/milk.jpg" alt="Dairy">
-          <div class="category-name">Dairy</div>
-        </a>
-        <a href="#" class="category-card">
-          <img
-            src="https://images.unsplash.com/photo-1509440159596-0249088772ff?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-            alt="Bakery">
-          <div class="category-name">Bakery</div>
-        </a>
-        <a href="#" class="category-card">
-          <img src="../../assets/meat.jpg" alt="Meat">
-          <div class="category-name">Meat</div>
-        </a>
-      </div>
+<section class="top-categories">
+  <div class="container">
+    <h2 class="section-title">Top Categories</h2>
+    <div class="categories-grid">
+      <app-category-card />
+      <app-category-card />
+      <app-category-card />
+      <app-category-card />
+      <app-category-card />
+
     </div>
-  </section>
+  </div>
+</section>
