--- a/quick-grocery/src/styles.css
+++ b/quick-grocery/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-  max-width: 100%;
+  width: 100%;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -257,6 +257,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .category-name {
