--- a/quick-grocery/src/styles.css
+++ b/quick-grocery/src/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -240,7 +240,7 @@ img {
   gap: 20px;
 }
 
-.category-card {
+.category-card{
   position: relative;
   border-radius: 8px;
   overflow: hidden;
@@ -257,7 +257,6 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 8px;
 }
 
 .category-name {
@@ -308,7 +307,7 @@ img {
 
 .product-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
 }
 
