app-promotion section

--- a/quick-grocery/src/app/app.component.html
+++ b/quick-grocery/src/app/app.component.html
@@ -4,5 +4,6 @@
   <app-top-category />
   <app-our-product-section />
   <app-food-blog-section/>
+  <app-app-promotion-section/>
   <app-footer/>
 </div>
