--- a/quick-grocery/src/app/app.component.html
+++ b/quick-grocery/src/app/app.component.html
@@ -1,9 +1,1 @@
-<div class="container">
-  <app-header />
-  <app-hero-banner />
-  <app-top-category />
-  <app-our-product-section />
-  <app-food-blog-section/>
-  <app-app-promotion-section/>
-  <app-footer/>
-</div>
+<app-home></app-home>
