--- a/quick-grocery/src/app/header/header.component.html
+++ b/quick-grocery/src/app/header/header.component.html
@@ -1,16 +1,17 @@
- <!-- Header Section -->
-  <header class="site-header">
-    <div class="container">
-      <div class="logo">
-        <h1>QuickGrocery</h1>
-      </div>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="offers.html">Special Offers</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-     
+<!-- Header Section -->
+<header class="site-header">
+  <div class="container">
+    <div class="logo">
+      <h1>QuickGrocery</h1>
+    </div>
+    <nav class="main-nav">
+      <ul>
+        <li><a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+        <li><a [routerLink]="['ourProduct']" routerLinkActive="active" >Products</a></li>
+        <li><a [routerLink]="['/specialOffer']" routerLinkActive="active">Special Offers</a></li>
+        <li><a [routerLink]="['/blog']" routerLinkActive="active">Blog</a></li>
+        <li><a [routerLink]="['/contact']" routerLinkActive="active">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
