--- a/quick-grocery/src/app/home/home.component.html
+++ b/quick-grocery/src/app/home/home.component.html
@@ -1,9 +1,5 @@
-<div class="container">
-  <app-header />
-  <app-hero-banner />
-  <app-top-category />
-  <app-our-product-section />
-  <app-food-blog-section/>
-  <app-app-promotion-section/>
-  <app-footer/>
-</div>
+<app-hero-banner />
+<app-top-category />
+<app-our-product-section />
+<app-food-blog-section />
+<app-app-promotion-section />
