our product changes

--- a/quick-grocery/src/app/our-product-section/our-product-section.component.html
+++ b/quick-grocery/src/app/our-product-section/our-product-section.component.html
@@ -12,10 +12,7 @@
             </ul>
         </div>
         <div class="product-grid">
-            <app-product-card/>
-            <app-product-card/>
-            <app-product-card/>
-            <app-product-card/>
+            <app-product-card *ngFor="let item of product"  [itemsObj]="item" />
         </div>
     </div>
 </section>
