--- a/quick-grocery/src/app/Pages/our-product/our-product.component.html
+++ b/quick-grocery/src/app/Pages/our-product/our-product.component.html
@@ -1,1 +1,18 @@
-<p>our-product works!</p>
+<section class="product-catalogue">
+    <div class="container">
+        <h2 class="section-title">Our Products</h2>
+        <div class="category-filter">
+            <ul>
+                <li><a href="#" class="active">All</a></li>
+                <li><a href="#">Fruits</a></li>
+                <li><a href="#">Vegetables</a></li>
+                <li><a href="#">Dairy</a></li>
+                <li><a href="#">Bakery</a></li>
+                <li><a href="#">Meat</a></li>
+            </ul>
+        </div>
+        <div class="product-grid">
+            <app-product-card *ngFor="let item of products"  [itemsObj]="item" />
+        </div>
+    </div>
+</section>
