--- a/quick-grocery/src/app/our-product-section/our-product-section.component.html
+++ b/quick-grocery/src/app/our-product-section/our-product-section.component.html
@@ -3,16 +3,16 @@
         <h2 class="section-title">Our Products</h2>
         <div class="category-filter">
             <ul>
-                <li><a href="#" class="active">All</a></li>
-                <li><a href="#">Fruits</a></li>
-                <li><a href="#">Vegetables</a></li>
-                <li><a href="#">Dairy</a></li>
-                <li><a href="#">Bakery</a></li>
-                <li><a href="#">Meat</a></li>
+                <li><a [routerLink]="['/ourProduct']" class="active">All</a></li>
+                <li><a [routerLink]="['/ourProduct/Fruits']">Fruits</a></li>
+                <li><a [routerLink]="['/ourProduct/Vegetables']">Vegetables</a></li>
+                <li><a [routerLink]="['/ourProduct/Dairy']">Dairy</a></li>
+                <li><a [routerLink]="['/ourProduct/Bakery']">Bakery</a></li>
+                <li><a [routerLink]="['/ourProduct/Meat']">Meat</a></li>
             </ul>
         </div>
         <div class="product-grid">
-            <app-product-card *ngFor="let item of product"  [itemsObj]="item" />
+            <app-product-card *ngFor="let item of product" [itemsObj]="item" />
         </div>
     </div>
 </section>
