--- a/quick-grocery/src/app/top-category/top-category.component.html
+++ b/quick-grocery/src/app/top-category/top-category.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="section-title">Top Categories</h2>
     <div class="categories-grid">
-      <app-product-card *ngFor="let item of product" [itemsObj]="item" />
+      <app-category-card *ngFor="let item of product" [itemsObj2]="item" />
     </div>
   </div>
 </section>
