added view item page

--- a/quick-grocery/src/app/Pages/our-product/our-product.component.html
+++ b/quick-grocery/src/app/Pages/our-product/our-product.component.html
@@ -10,7 +10,7 @@
             </ul>
         </div>
         <div class="product-grid">
-            <app-product-card *ngFor="let item of products" [itemsObj]="item" />
+            <app-product-card *ngFor="let item of products" [itemsObj]="item" [routerLink]="['/view-item',item.category?item.category:category, item.name ]" />
         </div>
     </div>
 </section>
