--- a/quick-grocery/src/app/app.component.html
+++ b/quick-grocery/src/app/app.component.html
@@ -10,8 +10,9 @@
         <li><a [routerLink]="['/specialOffer']" routerLinkActive="active">Special Offers</a></li>
         <li><a [routerLink]="['/blog']" routerLinkActive="active">Blog</a></li>
         <li><a [routerLink]="['/contact']" routerLinkActive="active">Contact</a></li>
-        <li><a [routerLink]="['/add-to-cart']" routerLinkActive="active"></a>
-        <i class="fas fa-shopping-cart"></i>
+        <li><a [routerLink]="['/add-to-cart']" routerLinkActive="active">
+          <i class="fas fa-shopping-cart"></i>
+        </a>
       </li>
       </ul>
     </nav>
