--- a/quick-grocery/src/app/app.component.html
+++ b/quick-grocery/src/app/app.component.html
@@ -16,6 +16,12 @@
       </li>
       </ul>
     </nav>
+     <div class="search-bar">
+        <form>
+          <input type="text" placeholder="Search for products...">
+          <button type="submit" class="search-btn">Search</button>
+        </form>
+      </div>
   </div>
 </header>
 <router-outlet></router-outlet>
