--- a/quick-grocery/src/app/Pages/view-item-page/view-item-page.component.html
+++ b/quick-grocery/src/app/Pages/view-item-page/view-item-page.component.html
@@ -49,15 +49,15 @@
             <div class="quantity">
               <label>Quantity:</label>
               <div class="quantity-selector">
-                <button class="qty-btn">-</button>
+                <button class="qty-btn" (click)="onClickSubQuantity()" >-</button>
                 <input type="text" value={{items.quantity}} class="qty-input">
-                <button class="qty-btn">+</button>
+                <button class="qty-btn"  (click)="onClickAddQuantity()" >+</button>
               </div>
               <span class="stock">In Stock</span>
             </div>
 
             <div class="product-actions">
-              <button class="btn btn-large">Add to Cart</button>
+              <button class="btn btn-large"  (click)="onClickAddToCart()" >Add to Cart</button>
               <button class="wishlist-btn">❤</button>
             </div>
           </div>
