add to cart complete

--- a/quick-grocery/src/app/sub-component/product-card/product-card.component.html
+++ b/quick-grocery/src/app/sub-component/product-card/product-card.component.html
@@ -1,7 +1,6 @@
-<div class="product-card" >
+<div class="product-card">
     <div class="product-image">
-        <img [src]="itemsObj.images[0]"
-            alt="Fresh Organic Apples">
+        <img [src]="itemsObj.images[0]" alt="Fresh Organic Apples">
         <span class="badge">Organic</span>
     </div>
     <div class="product-info">
