--- a/quick-grocery/src/app/sub-component/add-to-cart-card/add-to-cart-card.component.html
+++ b/quick-grocery/src/app/sub-component/add-to-cart-card/add-to-cart-card.component.html
@@ -1,16 +1,22 @@
 <article class="cp-card" data-price="2.49">
-    <img src="https://placehold.co/100x100" alt="Apples" class="cp-card-img">
+    <img src="{{itemObj3.image}}" alt="Apples" class="cp-card-img">
     <div class="cp-card-details">
-        <div class="cp-title">Organic Apples</div>
-        <div><span class="cp-price">$2.49</span><span class="cp-unit">/ lb</span></div>
-
+        <div class="cp-title">{{itemObj3.name}}</div>
+        <div>
+            <span class="cp-price">${{itemObj3.price}}</span>
+            <span class="cp-unit">/ {{itemObj3.unit}}</span>
+        </div>
         <div>
             <div class="cp-qty-group">
-                <button class="cp-qty-btn" onclick="cpChangeQty(this,-1)">−</button>
-                <input type="number" min="1" value="2" class="cp-qty-input" oninput="cpRecalc()">
-                <button class="cp-qty-btn" onclick="cpChangeQty(this,1)">+</button>
+                <button class="cp-qty-btn" (click)="onClickSub()">−</button>
+                <input type="number" min="1" [value]="itemObj3.quantity" class="cp-qty-input">
+                <button class="cp-qty-btn" (click)="onclickAdd()" >+</button>
             </div>
-            <span class="cp-remove" onclick="cpRemove(this)">Remove</span>
+            <span class="cp-remove" (click)="onClickDelete()" >Remove</span>
+        </div>
+        <div class="cp-subtotal">
+            Subtotal: <span>${{itemObj3.price * itemObj3.quantity | number:'1.2-2'}}</span>
         </div>
     </div>
 </article>
+
