special offers modified

--- a/quick-grocery/src/app/Pages/special-offer/special-offer.component.html
+++ b/quick-grocery/src/app/Pages/special-offer/special-offer.component.html
@@ -28,7 +28,7 @@
       <h3 class="offer-title">Weekly Deals</h3>
       <div class="product-grid">
         <div class="product-card" *ngFor="let item of product1">
-          <div class="product-image">
+          <div class="product-image2">
             <app-weekly-deals [itemsObj3]="item" />
           </div>
         </div>
@@ -39,7 +39,7 @@
       <h3 class="offer-title">Buy One Get One Free</h3>
       <div class="product-grid">
         <div class="product-card" *ngFor="let item of product2">
-          <div class="product-image">
+          <div class="product-image2">
             <app-weekly-deals [itemsObj3]="item" />
           </div>
         </div>
@@ -50,7 +50,7 @@
       <h3 class="offer-title">Clearance Items - up to 50% off</h3>
       <div class="product-grid">
         <div class="product-card" *ngFor="let item of product3">
-          <div class="product-image">
+          <div class="product-image2">
             <app-weekly-deals [itemsObj3]="item" />
           </div>
         </div>
