--- a/quick-grocery/src/styles.css
+++ b/quick-grocery/src/styles.css
@@ -351,6 +351,14 @@ img {
   object-fit: cover;
 }
 
+.product-image2 img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+
+
 .badge {
   position: absolute;
   top: 10px;
