cart item display on header

--- a/quick-grocery/src/app/app.component.html
+++ b/quick-grocery/src/app/app.component.html
@@ -10,10 +10,12 @@
         <li><a [routerLink]="['/specialOffer']" routerLinkActive="active">Special Offers</a></li>
         <li><a [routerLink]="['/blog']" routerLinkActive="active">Blog</a></li>
         <li><a [routerLink]="['/contact']" routerLinkActive="active">Contact</a></li>
-        <li><a [routerLink]="['/add-to-cart']" routerLinkActive="active">
-          <i class="fas fa-shopping-cart"></i>
-        </a>
-      </li>
+        <li>
+          <a [routerLink]="['/add-to-cart']" routerLinkActive="active">
+        <i class="fas fa-shopping-cart"></i>
+             <span class="cart-count">{{totalQuantity}}</span>
+          </a>
+        </li>
       </ul>
     </nav>
      <div class="search-bar">
